# dippy.core

./: .gitignore  CONTRIBUTING.md  example_usage.py  pyproject.toml  readme.md
.github/workflows/: main.yml
dippy/core/: __init__.py  converters.py  datetime_helpers.py  enums.py  events.py  exceptions.py  intents.py  model.py  not_set.py  permissions.py  sentinel.py  snowflake.py  timestamp.py  validators.py  version.py
dippy/core/api/: api.py  bases.py  client.py  endpoint.py  request.py
dippy/core/api/endpoints/: audit_logs.py  channels.py  guilds.py  invite.py  stage.py  users.py
dippy/core/api/models/: activity.py  applications.py  audit_log.py  base_model.py  channels.py  emoji.py  guild_template.py  guilds.py  integrations.py  messages.py  permissions.py  presences.py  stickers.py  users.py  webhooks.py
dippy/core/cache/: abc.py  cache.py  controller.py  manager.py  view.py
dippy/core/caching/: bases.py  cache.py  cacheable.py  manager.py
dippy/core/enums/: activity.py  audit_logs.py  channels.py  enums.py  guilds.py  integrations.py  messages.py  permissions.py  stickers.py  users.py  webhooks.py
dippy/core/gateway/: bases.py  connection.py  event_mapper.py  heartbeat.py  payload.py
dippy/core/interfaces/: channel.py  guild.py  member.py  message.py  user.py
dippy/core/model/: annotions.py  converters.py  data_models.py  fields.py  metadata.py  models.py  partials.py  validators.py
dippy/core/models/: activity.py  application.py  attachment.py  audit_log.py  base_model.py  channel.py  channels.py  client_status.py  embed.py  emoji.py  events.py  game.py  guild.py  guilds.py  interaction.py  member.py  message.py  messages.py  model.py  overwrite.py  permissions.py  presence.py  presences.py  reaction.py  role.py  sticker.py  stickers.py  team.py  team_member.py  user.py  users.py  voice_state.py
tests/: .env  test_caching.py  test_invite.py  test_models.py  test_rest_client.py  test_send_message.py  test_snowflake.py  test_stage.py
