[tool.poetry]
name = "Dippy.core"
version = "1.0.0-alpha.1"
description = "Async Discord Gateway client."
authors = ["Zech Zimmerman <hi@zech.codes>"]
packages = [
    { include = "dippy" }
]
license = "MIT"
readme = "readme.md"
homepage = "https://github.com/ZechCodes/dippy.core"
repository = "https://github.com/ZechCodes/dippy.core"
documentation = "https://github.com/ZechCodes/dippy.core/blob/main/readme.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.7.4"
bevy = "^0.4.6"
attrs = "^21.2.0"
pendulum = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
